# SofaSimpleForcefield

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  SVKElasticForcefield.cpp  SVKElasticForcefield.h  SVKElasticForcefield_FEniCS.cpp  SVKElasticForcefield_FEniCS.h  SVKElasticForcefield_SOFA.cpp  SVKElasticForcefield_SOFA.h  SofaSimpleForcefieldConfig.cmake.in  cantilever_beam.scn  hyperelasticity.c  init.cpp
.github/workflows/: main.yml  ubuntu-main.yml  ubuntu-v21-06-02.yml  ubuntu.yml
fenics/: SaintVenantKirchhoff_Hexa.c  SaintVenantKirchhoff_Hexa.h  SaintVenantKirchhoff_Hexa.ufl  SaintVenantKirchhoff_Tetra.c  SaintVenantKirchhoff_Tetra.h  SaintVenantKirchhoff_Tetra_Order2.c  SaintVenantKirchhoff_Tetra_Order2.h  SaintVenantKirchhoff_Tetra_Order2.ufl  hyperelasticity.c  hyperelasticity.h  hyperelasticity.ufl
scenes/: cantilever_beam.scn  cantilever_beam_FEniCS.py  cantilever_beam_FEniCS_hexa.py  cantilever_beam_SOFA.py  cantilever_beam_SOFA.scn  cantilever_beam_SOFA_hexa.py  runSofa.ini
src/: Hexahedron.h  SVKElasticForcefield_FEniCS.cpp  SVKElasticForcefield_FEniCS.h  SVKElasticForcefield_FEniCS_Hexa.cpp  SVKElasticForcefield_FEniCS_Hexa.h  SVKElasticForcefield_SOFA_Hexa.cpp  SVKElasticForcefield_SOFA_Hexa.h  SVKElasticForcefield_SOFA_Tetra_Order2.cpp  SVKElasticForcefield_SOFA_Tetra_Order2.h  Tetrahedron.h  Tetrahedron_Order2.h
src/Python/: SVKElasticForcefield_FEniCS.cpp
tests/: SaintVenantKirchhoff_Tetra_Order1.py  test_SaintVenantKirchhoff_Tetra_Order1.py
